Added VictoryState and GameOverState with the font used as well as setup font enum and config for font

--- a/src/config.json
+++ b/src/config.json
@@ -62,7 +62,10 @@
 		}
 	],
 	"fonts": [
-
+		{
+		"name": "Press Start 2P",
+		"path": "./assets/PressStart2P-Regular.ttf"
+		}
 	],
 	"sounds": [
 		{
