Fixed clear screen sprite, two different names were used resulting in the default letter to be there.

--- a/src/config.json
+++ b/src/config.json
@@ -91,7 +91,7 @@
 			"height": 32
 		},
 		{
-			"name": "clear_screen",
+			"name": "clear-screen",
 			"path": "../assets/images/high_volition_attractor.png",
 			"width": 32,
 			"height": 32
